--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Yi's Website</title>
     <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
@@ -12,30 +12,29 @@
     <header>
         <h1>You've stumbled into Yi's Hideout</h1>
     </header>
-    <div class="container">
-        <nav>
-            <ul>
-                <li><a href="misc/courses.html" title="List of courses">My Courses</a></li>
-                <li><a href="misc/school.html" title="My school">My School</a></li>
-            </ul>
-        </nav>
-        <section>
-            <img src="images/my_image.jpg" alt="Yi's picture" height="500" class="center" />
-        </section>
-        <article>
-            <p>This is Yi's hideout, where Yi resides. Although, Yi is orginally from Ontario, he thinks his current
-                hideout
-                is
-                <em>amazing.</em> Yi is a chill guy who enjoys weightlifting, volleyball, and listening to
-                music. He has a variety of favorite foods, but he does not like cheese.<strong> Do not give him cheese
-                    at
-                    all!</strong>
-            </p>
-        </article>
-        <footer>
-            <h2>Shhh don't tell anyone. Keep this place a secret.</h2>
-        </footer>
-    </div>
+
+    <nav class="content-wrap">
+        <ul class="links">
+            <li><a href="misc/courses.html" title="List of courses">My Courses</a></li>
+            <li><a href="misc/school.html" title="My school">My School</a></li>
+        </ul>
+    </nav>
+
+    <!-- <section>
+        <img src="images/my_image.jpg" alt="Yi's picture" height="500" class="picture"/>
+    </section> -->
+
+    <article class="about-container">
+        <h2 class="grid-item">About Me</h2>
+        <p class="grid-item">This is Yi's hideout, where Yi resides. Although, Yi is orginally from Ontario, he thinks his current hideout is <em>amazing.</em></p>
+        <p class="grid-item">Yi is a chill guy who enjoys weightlifting, volleyball, and listening to music. He has a variety of favorite foods, but he does not like cheese.<strong> Do not give him cheese at all!</strong></p>
+        <img src="images/my_image.jpg" alt="Yi's picture" height="500" class="picture"/>
+    </article>
+
+    <footer>
+        <h2>Copyright Data</h2>
+    </footer>
+
 </body>
 
 </html>
