added navigation menu to each page

--- a/misc/courses.html
+++ b/misc/courses.html
@@ -13,6 +13,12 @@
     <header>
         <h1>These are the courses that Yi is taking</h1>
     </header>
+    <nav class="content-wrap">
+        <ul class="links">
+            <li><a href="../index.html" title="Home">Home</a></li>
+            <li><a href="school.html" title="My school">My School</a></li>
+        </ul>
+    </nav>
     <article>
         <p>Here are three courses that he is currently taking:</p>
         <ul>
@@ -25,6 +31,10 @@
                     Scripting for IT</a></li>
         </ul>
     </article>
+    
+    <footer>
+        <h2>Copyright Data</h2>
+    </footer>
 </body>
 
 </html>
