--- a/misc/school.html
+++ b/misc/school.html
@@ -13,11 +13,21 @@
     <header>
         <h1>This is where Yi goes to school</h1>
     </header>
+    <nav class="content-wrap">
+        <ul class="links">
+            <li><a href="courses.html" title="List of courses">My Courses</a></li>
+            <li><a href="../index.html" title="Home">Home</a></li>
+        </ul>
+    </nav>
     <section>
         <a href="https://www.bcit.ca/" title="BCIT website">
             <img src="../images/bcit_logo.png" alt="BCIT logo" height="350" class="center" />
         </a>
     </section>
+    
+    <footer>
+        <h2>Copyright Data</h2>
+    </footer>
 </body>
 
 </html>
