turned courses from list elements to grid items

--- a/misc/courses.html
+++ b/misc/courses.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Courses</title>
     <link rel="stylesheet" href="../css/stylesheet.css">
 </head>
 
@@ -19,19 +19,44 @@
             <li><a href="school.html" title="My school">My School</a></li>
         </ul>
     </nav>
-    <article>
-        <p>Here are three courses that he is currently taking:</p>
-        <ul>
-            <li><a href="https://www.bcit.ca/outlines/20211085986/" title="ACIT-1620 Course Outline">ACIT-1620 -
-                    Fundamental Web Technologies</a></li>
-            <li><a href="https://learn.bcit.ca/d2l/home/714780" title="ORGB-1100 Course Home">ORGB-1100 -
-                    Organizational
-                    Behaviour</a></li>
-            <li><a href="https://www.bcit.ca/outlines/20211085985/" title="ACIT-1515 Course Outline">ACIT-1515 -
-                    Scripting for IT</a></li>
-        </ul>
-    </article>
-    
+
+
+    <div class="content-wrap">
+
+        <section class="courses">
+            <div class="course-id">
+                <a href="https://www.bcit.ca/outlines/20211085986/" title="ACIT-1620 Course Outline">ACIT-1620 -
+                    Fundamental Web Technologies</a>
+                <p>Winter 2021</p>
+            </div>
+            <div class="course-desc">
+                <p>This course introduces the fundamental principles, concepts, and techniques for understanding and
+                    developing modern web sites.</p>
+            </div>
+        </section>
+
+        <section class="courses">
+            <div class="course-id">
+                <a href="https://learn.bcit.ca/d2l/home/714780" title="ORGB-1100 Course Home">ORGB-1100 - Organizational Behaviour</a>
+                <p>Winter 2021</p>
+            </div>
+            <div class="course-desc">
+                <p>This course teaches how employees and organizations can use behaviours to succeed in business.</p>
+            </div>
+        </section>
+
+        <section class="courses">
+            <div class="course-id">
+                <a href="https://www.bcit.ca/outlines/20211085985/" title="ACIT-1515 Course Outline">ACIT-1515 - Scripting for IT</a>
+                <p>Winter 2021</p>
+            </div>
+            <div class="course-desc">
+                <p>The course introduces the fundamental concepts of programming for IT professionals.</p>
+            </div>
+        </section>
+
+    </div>
+
     <footer>
         <h2>Copyright Data</h2>
     </footer>
