--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yi's Website</title>
     <link rel="stylesheet" href="css/stylesheet.css">
+    <script src="javascript/script.js"></script>
 </head>
 
 <body>
